ui/src/assets/forms.scss
.submitFailure {
  background-color: #FFCDD2;
  color: #D50000;
  padding: 0.5em;
  margin: 0 0 2em;
}

.form__row {
  margin: 0 0 1.5em;
  position: relative;
}

.form__fieldError {
  color: #D50000;
  position: absolute;
}

.form__label {
  margin: 0 0 0.5em;
}

.form__input {
  width: 100%;
}

.form__input--right input {
  text-align: right;
}

.form__input--withPrefix {
  display: flex;

  input {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    min-width: unset;
    flex: 1;
  }
}

.form__inputPrefix {
  background-color: #eaeaea;
  text-align: center;
  border: 1px solid #c1c1c1;
  border-right: none;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  padding: 0.5em 0;
  width: 32px;
}

.form__radios {
  display: flex;
}

.form__radio {
  flex: 1;
  position: relative;

  label {
    background-color: #fafafa;
    border: 1px solid #c1c1c1;
    border-right-width: 0px;
    text-align: center;
    display: block;
    padding: 0.5em;
    cursor: pointer;
  }

  input {
    position: absolute;
    visibility: hidden;

    &:checked + label {
      background-color: #eaeaea;
      font-weight: bold;
    }
  }

  &:first-of-type label {
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
  }

  &:last-of-type label {
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    border-right-width: 1px;
  }
}

.form__footer {
  text-align: center;
  margin: 0 0 1em;
  
  button {
    margin: 0 0.5em 0 0;
  }
}

@media screen and (min-width: 480px) {
  .form__row {
    display: flex;
    margin: 0 0 2em;
  }

  .modal .form__row {
    display: block;
  }

  .form__label {
    text-align: right;
    padding: 0.5em 0.5em 0 0;
    width: 30%;
    box-sizing: border-box;
  }

  .modal .form__label {
    width: unset;
    text-align: unset;
  }

  .form__input {
    width: 300px;
  }

  .modal .form__input {
    width: 400px;
  }

  .form__footer {
    text-align: left;
    padding: 0 0 0 30%;
  }

  .modal .form__footer {
    text-align: center;
    padding: unset;
  }
}

